[gd_scene load_steps=3 format=3 uid="uid://6w68s6t04fv"]

[ext_resource type="Texture2D" uid="uid://dt4ey14mlingg" path="res://weapons/machinegun/machinegun.png" id="1_67b1n"]
[ext_resource type="Script" uid="uid://bu0fh052uv5oh" path="res://UI/loja da morte/upgrade_card.gd" id="1_s5r5i"]

[node name="Upgrade_card" type="MarginContainer"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_s5r5i")
possibilities_target = Dictionary[int, String]({
0: "Player",
1: "Weapon"
})
target_possibilities = Dictionary[String, Array]({
"Player": ["Vida_max", "Stamina_max", "Stamina_rege", "sword_damage"],
"Weapon": ["Revolver", "Metralhadora", "Shotgun", "Magnum", "Bazuca"]
})
metadata/_edit_pinned_properties_ = [&"possibilities_target"]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="upgrade_name" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
text = "Nome do upgrade"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="upgrade_image" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
texture = ExtResource("1_67b1n")
stretch_mode = 3

[node name="upgrade_effect" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Efeito do upgrade"
horizontal_alignment = 1
autowrap_mode = 2

[node name="upgrade_cost" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Custo do upgrade"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "Comprar"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
